# Learn-LLVM-17

./: .clang-format  .gitignore  README.md
Chapter02/calc/: CMakeLists.txt
Chapter02/calc/src/: CodeGen.cpp  Lexer.cpp
Chapter03/tinylang/include/tinylang/Basic/: LLVM.h
Chapter03/tinylang/lib/Lexer/: Lexer.cpp
Chapter03/tinylang/lib/Parser/: Parser.cpp  tinylang.g
Chapter03/tinylang/lib/Sema/: Sema.cpp
Chapter03/tinylang/tools/driver/: Driver.cpp
Chapter04/tinylang/: CMakeLists.txt
Chapter04/tinylang/examples/: Gcd.mod  callgcd.c
Chapter04/tinylang/include/tinylang/AST/: AST.h
Chapter04/tinylang/include/tinylang/Basic/: Diagnostic.def  Diagnostic.h
Chapter04/tinylang/include/tinylang/CodeGen/: CGProcedure.h  CodeGenerator.h
Chapter04/tinylang/include/tinylang/Lexer/: Token.h
Chapter04/tinylang/include/tinylang/Parser/: Parser.h
Chapter04/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CodeGenerator.cpp
Chapter04/tinylang/lib/Lexer/: Lexer.cpp
Chapter04/tinylang/lib/Parser/: Parser.cpp
Chapter04/tinylang/lib/Sema/: Sema.cpp
Chapter04/tinylang/tools/driver/: Driver.cpp
Chapter05/tinylang/: CMakeLists.txt
Chapter05/tinylang/include/tinylang/Parser/: Parser.h
Chapter05/tinylang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp
Chapter05/tinylang/lib/Parser/: Parser.cpp
Chapter06/calc/src/: CodeGen.cpp
Chapter06/tinylang/examples/: Person.mod  Person2.mod  SpecialPtr.mod
Chapter06/tinylang/include/tinylang/AST/: AST.h
Chapter06/tinylang/include/tinylang/CodeGen/: CGProcedure.h  CodeGenerator.h
Chapter06/tinylang/lib/CodeGen/: CGDebugInfo.cpp  CGModule.cpp  CGProcedure.cpp  CGTBAA.cpp
Chapter06/tinylang/tools/driver/: Driver.cpp
Chapter07/ppprofiler/: CMakeLists.txt  PPProfiler.cpp
Chapter07/ppprofiler-intree/: ppprofiler.diff
Chapter07/ppprofiler-intree-plugin/: ppprofiler.diff
Chapter07/ppprofiler/runtime/: runtime.c
Chapter07/ppprofiler/scripts/: avg.awk  count.awk  demangle.awk  join.awk
Chapter07/tinylang/lib/CodeGen/: CGModule.cpp
Chapter07/tinylang/tools/driver/: Driver.cpp
Chapter07/tinylang2/lib/CodeGen/: CGDebugInfo.cpp  CGProcedure.cpp  CGTBAA.cpp
Chapter07/tinylang2/lib/Parser/: Parser.cpp
Chapter07/tinylang2/lib/Sema/: Sema.cpp
Chapter07/tinylang2/tools/driver/: CMakeLists.txt  Driver.cpp
Chapter08/TableGen/: CMakeLists.txt  Keyword.td  KeywordC.td  KeywordM2.td  TableGen.cpp  TableGenBackends.h  TokenEmitter.cpp
Chapter09/jit/: CMakeLists.txt  JIT.cpp  JIT.h  main.c
Chapter09/lljit/: AST.h  CMakeLists.txt  Calc.cpp  CodeGen.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Sema.cpp  Sema.h
Chapter09/lljit/examples/: greetings.c  hello.ll  main.ll
Chapter10/clang-plugin/: CMakeLists.txt
Chapter10/clang-plugin/example/: naming.c
Chapter10/clang-plugin2/: CMakeLists.txt
Chapter10/iconvchecker/: CMakeLists.txt  IconvChecker.cpp
Chapter10/iconvchecker/example/: conv.c
Chapter11/: 0001-Add-m88k-to-the-Triple-class.patch  0002-Add-support-for-the-m88k-variant-of-ELF.patch  0003-TableGen-SubtargetEmitter-must-use-std-nullopt-69475.patch  0004-Add-minimal-m88k-target.patch  0005-Add-AsmParser.patch  0006-Add-disassembler.patch  README.md
Chapter12/: 0007-Add-SelectionDAG.patch  0008-Add-GLobalISel.patch  README.md
Chapter13/: 0009-Add-m88k-div-instr-pass.patch  README.md
